--- a/front/src/pages-styles/About.module.scss
+++ b/front/src/pages-styles/About.module.scss
@@ -4,7 +4,7 @@
   height: 100%;
 
   .verse {
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     padding: 10px;
     margin: 50px 0 !important;
